Ajout du dockerfile et modification du docker-compose pour FastAPI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,14 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  fastapi:
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/communes_db
+    depends_on:
+      - postgres
+      
 volumes:
   postgres_data:
