suppression de la version car obsolete

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.8'
 services:
   postgres:
     image: postgres:13
     environment:
-      POSTGRES_DB: communes_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5433:5432"
     volumes:
@@ -16,9 +15,9 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/communes_db
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - postgres
-      
+
 volumes:
   postgres_data:
